# Compiler

./: .gitignore  CFG parser.cpp  CFG parser.h  CFG_input.txt  CMakeLists.txt  DFA.cpp  Main.java  NFA.h  README.md  cfg_input_parser.h  cleaned.txt  input.txt  lex.yy.c  lex_example.txt  lexer  lexicalAnalyzer.l  lexical_analyzer.cpp  lexical_analyzer.h  lexical_rules.cpp  main  main.cpp  node.h  output.txt  parser.cpp  parser.h  parsing output.txt  parsing table.csv  parsing_table.h  parsing_table_test.cpp  production.h  production_test  production_test.cpp  utilities.h
DFAMinimizer/: DFAMinimizer.cbp  DFAMinimizer.depend  main  main.cpp
phase one/: CMakeLists.txt  DFA.cpp  DFA.h  DFA_test.cpp  NFA.cpp  NFA.h  dsfds.cpp  input_example.txt  lexical_analyzer.cpp  node.cpp  node.h  read_input  read_input.cpp  utilities.cpp  utilities.h
phase2/: grammar.txt
